--- a/src/routes/app.scss
+++ b/src/routes/app.scss
@@ -3,6 +3,11 @@
 }
 
 body {
+	font-family: 'Quicksand', sans-serif;
+	font-family: 'Outfit', sans-serif;
+	font-family: 'Satoshi', sans-serif;
+	font-family: 'Epilogue', sans-serif;
+	font-family: 'Chillax', sans-serif;
 	margin: 0;
 	background: var(--bg);
 }
