--- a/src/routes/app.scss
+++ b/src/routes/app.scss
@@ -7,10 +7,10 @@
 body {
 	font-family: 'Quicksand', sans-serif;
 	font-family: 'Outfit', sans-serif;
-	// font-family: 'Satoshi', sans-serif;
+	font-family: 'Satoshi', sans-serif;
 	// font-family: 'Epilogue', sans-serif;
 	// font-family: 'Chillax', sans-serif;
-	font-weight: 300;
+	// font-weight: 300;
 	color: var(--txt);
 	background: var(--bg);
 	margin: 0;
