--- a/src/routes/app.scss
+++ b/src/routes/app.scss
@@ -1,16 +1,21 @@
 :root {
 	--bg: oklch(90% 0.04 180);
 	--bg-2: oklch(85% 0.04 180);
-	--txt: oklch(20% 0.01 180);
+	--bg-3: oklch(30% 0.03 180 / 0.2);
+	--txt: oklch(30% 0.03 180);
+}
+
+* {
+	box-sizing: border-box;
 }
 
 body {
 	font-family: 'Quicksand', sans-serif;
 	font-family: 'Outfit', sans-serif;
-	font-family: 'Satoshi', sans-serif;
+	// font-family: 'Satoshi', sans-serif;
 	// font-family: 'Epilogue', sans-serif;
 	// font-family: 'Chillax', sans-serif;
-	// font-weight: 300;
+	font-weight: 300;
 	color: var(--txt);
 	background: var(--bg);
 	margin: 0;
