--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,8 @@
 :root {
-	--bg: oklch(90% 0.04 180);
-	--bg-2: oklch(85% 0.04 180);
-	--bg-3: oklch(30% 0.03 180 / 0.2);
-	--txt: oklch(30% 0.03 180);
+	--bg: oklch(90% 0.05 180);
+	--bg-2: oklch(85% 0.05 180);
+	--bg-3: oklch(30% 0.04 180 / 0.2);
+	--txt: oklch(30% 0.04 180);
 }
 
 * {
@@ -19,6 +19,14 @@ body {
 	color: var(--txt);
 	background: var(--bg);
 	margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-weight: 500;
 }
 
 button {
