--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,9 @@
 :root {
-	--bg: oklch(90% 0.05 180);
-	--bg-2: oklch(85% 0.05 180);
-	--bg-3: oklch(30% 0.04 180 / 0.2);
-	--txt: oklch(30% 0.04 180);
+	--bg-0: oklch(93% 0.05 180);
+	--bg-1: oklch(90% 0.05 180);
+	--bg-2: oklch(60% 0.05 180 / 0.2);
+	--bg-3: oklch(30% 0.05 180 / 0.2);
+	--txt: oklch(30% 0.05 180);
 }
 
 * {
@@ -17,7 +18,7 @@ body {
 	// font-family: 'Chillax', sans-serif;
 	font-weight: 300;
 	color: var(--txt);
-	background: var(--bg);
+	background: var(--bg-1);
 	margin: 0;
 }
 
