add 4-7-8 and circle

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,7 @@
 	--bg-1: oklch(90% 0.05 180);
 	--bg-2: oklch(60% 0.05 180 / 0.2);
 	--bg-3: oklch(30% 0.05 180 / 0.2);
+	--bg-4: oklch(30% 0.05 180 / 0.3);
 	--txt: oklch(30% 0.05 180);
 }
 
