--- a/src/app.scss
+++ b/src/app.scss
@@ -23,12 +23,11 @@ body {
 	margin: 0;
 }
 
-h1,
 h2,
 h3,
 h4,
 h5 {
-	// font-weight: 500;
+	font-weight: 500;
 }
 
 button {
@@ -47,4 +46,13 @@ button {
 	display: inline-block;
 	vertical-align: middle;
 	line-height: 0.8;
+}
+
+.icon-button {
+	@include flexCenter;
+
+	padding: 1rem;
+	color: inherit;
+	background: var(--bg-2);
+	border-radius: 50%;
 }
