--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,7 @@
 :root {
 	--bg-0: oklch(93% 0.05 180);
 	--bg-1: oklch(90% 0.05 180);
-	--bg-2: oklch(60% 0.05 180 / 0.2);
+	--bg-2: oklch(30% 0.05 180 / 0.1);
 	--bg-3: oklch(30% 0.05 180 / 0.2);
 	--bg-4: oklch(30% 0.05 180 / 0.3);
 	--txt: oklch(30% 0.05 180);
@@ -19,15 +19,8 @@ body {
 	// font-family: 'Chillax', sans-serif;
 	// font-weight: 300;
 	color: var(--txt);
-	background: var(--bg-1);
+	background-color: var(--bg-1);
 	margin: 0;
-}
-
-h2,
-h3,
-h4,
-h5 {
-	font-weight: 500;
 }
 
 button {
@@ -53,6 +46,7 @@ button {
 
 	padding: 1rem;
 	color: inherit;
-	background: var(--bg-2);
+	background-color: var(--bg-2);
+	backdrop-filter: blur(3px);
 	border-radius: 50%;
 }
