test layout again

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,10 @@
 	box-sizing: border-box;
 }
 
+h1 {
+	font-weight: 600;
+}
+
 body {
 	font-family: 'Quicksand', sans-serif;
 	font-family: 'Outfit', sans-serif;
